--- a/DockerEnvironment/docker-compose.yml
+++ b/DockerEnvironment/docker-compose.yml
@@ -11,14 +11,14 @@ services:
       - "MYSQL_USER=feinstrubUser"
       - "MYSQL_PASSWORD=feinstrubpw"
       - "MYSQL_ROOT_PASSWORD=feinstrub_root"
-    command: mysqld
     labels:
       feinstrub/db/production: "This database is used in the production environment"
-  pythonRuntime:
+    command: mysqld --innodb_flush_method=fdatasync
+  python_runtime:
     build: ./pythonBuild
     volumes:
       - "./pythonBuild/scripts:/python-scripts"
-    labes:
+    labels:
       feinstrub/python3/production: "This will setup a virtualized python 3 environment"
     depends_on:
       - database
