--- a/DockerEnvironment/docker-compose.yml
+++ b/DockerEnvironment/docker-compose.yml
@@ -1,23 +1,17 @@
 version: "3"
 services:
   database:
-    image: mariadb:10
+    image: mongo:latest
     ports:
-      - "3306:3306"
-    volumes:
-      - "./mariadb:/var/lib/mysql:rw"
+      - "27017:27017"
     environment:
-      - "MYSQL_DATABASE=FeinstrubDB"
-      - "MYSQL_USER=feinstrubUser"
-      - "MYSQL_PASSWORD=feinstrubpw"
-      - "MYSQL_ROOT_PASSWORD=feinstrub_root"
+      - MONGODB_DBNAME=feinstrubMongoDB
+      - MONGODB_USERNAME=mongo
+      - MONGODB_PASSWORD=mongo
     labels:
       feinstrub/db/production: "This database is used in the production environment"
-    command: mysqld --innodb_flush_method=fdatasync
   python_runtime:
     build: ./pythonBuild
-    volumes:
-      - "./pythonBuild/scripts:/python-scripts"
     labels:
       feinstrub/python3/production: "This will setup a virtualized python 3 environment"
     depends_on:
