--- a/DockerEnvironment/pythonBuild/dockerfile
+++ b/DockerEnvironment/pythonBuild/dockerfile
@@ -6,5 +6,8 @@ WORKDIR /python-scripts
 ADD ./start.py /python-scripts
 COPY ./scripts /python-scripts
 RUN chmod -R 777 ./ && \
-    python -m pip install pymongo
+    python -m pip install pymongo && \
+    python -m pip install googlemaps && \
+    python -m pip install python-telegram-bot && \
+    python -m pip install urlopen
 CMD [ "python", "/python-scripts/start.py" ]
